# test-repo

./: .gitlab-ci.yml  CMakeLists.txt  Dockerfile.app  Dockerfile.web  docker-compose.yml  entrypoint.sh  main.cpp
.github/workflows/: .gitlab-ci.yml  docker-web-tests.yml  docker-web-tests.yml.
helm/test-repo-chart/test-repo-chart/: values.yaml
helm/test-repo-chart/test-repo-chart/templates/: app-deployment.yaml  web-deployment.yaml  web-service.yaml
k8s/: app-deployment.yaml  rbac.yaml  web-deployment.yaml  web-service.yaml
